examples/test/testpolicy5100.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5100
  namespace: namespace278
spec:
  podSelector:
    matchLabels:
      key4: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value45
          key5: value20
          key10: value34
      podSelector:
        matchLabels:
          key25: value1
          key35: value35
          key29: value31
